feat: create get route
